--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -71,3 +71,16 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/NavigationSystem.RecastNavMesh]
+bFixedTilePoolSize=False
+MaxSimplificationError=0.500000
+AgentRadius=0.000000
+MergeRegionSize=1000.000000
+bSortNavigationAreasByCost=False
+bForceRebuildOnLoad=True
+MinRegionArea=1.000000
+CellSize=1.000000
+CellHeight=2.000000
+DrawOffset=5.000000
+TileSizeUU=500.000000
+
